--- a/VRTest/VRTestWeb.Razor.csproj
+++ b/VRTest/VRTestWeb.Razor.csproj
@@ -2,6 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <AssemblyName>VRTestWeb.Razor</AssemblyName>
+    <RootNamespace>VRTestWeb.Razor</RootNamespace>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
 
   <ItemGroup>
