--- a/vrtest.angular.app/ClientApp/package.json
+++ b/vrtest.angular.app/ClientApp/package.json
@@ -28,6 +28,7 @@
     "bootstrap": "^3.4.1",
     "core-js": "^2.4.1",
     "rxjs": "^5.5.6",
+    "validate-typescript": "^4.0.2",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
